--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="pokemon_box">
 
 <div id="pokemon_uno"></div>
-<button id="pokemon_uno_boton">aparecer</button>
+<center> <button id="pokemon_uno_boton">aparecer</button> </center>
 
 
 
